--- a/index.html
+++ b/index.html
@@ -3,9 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Toter</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="logo">LOGO</div>
+            <ul>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#industries">Industries</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#resources">Resources</a></li>
+                <li><a href="#about">About Us</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Headline</h1>
+            <p>subheadline</p>
+            <a href="#cta" class="cta-btn">Get Started</a>
+        </div>
+    </section>
+
+    <section id="services" class="services">
+        <h2>Our Services</h2>
+        <p>subheadline</p>
+        <div class="service-list">
+            <div class="service-item">Service 1</div>
+            <div class="service-item">Service 2</div>
+            <div class="service-item">Service 3</div>
+            <div class="service-item">Service 4</div>
+            <div class="service-item">Service 5</div>
+        </div>
+    </section>
+
+    <section id="advantages" class="advantages">
+        <h2>Advantages</h2>
+        <p>subheadline</p>
+        <div class="advantages-list">
+            <div class="advantages-item">advantage 1</div>
+            <div class="advantages-item">advantage 2</div>
+            <div class="advantages-item">advantage 3</div>
+        </div>
+    </section>
+
+    <section id="companies" class="companies">
+        <h2>Companies</h2>
+        <p>list of affiliate companies</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 All rights reserved :3</p>
+    </footer>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
