--- a/index.html
+++ b/index.html
@@ -2,29 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Toter</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo">LOGO</div>
-            <ul>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#industries">Industries</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#resources">Resources</a></li>
-                <li><a href="#about">About Us</a></li>
-            </ul>
+    <header class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-light py-3">
+            <a class="navbar-brand" href="#">
+                <img src="assets/logo-01.svg" alt="logo" class="logo col col-xs-2 col-md-3 col-lg-5">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+				aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+			</button>
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 mt-4 mt-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="#products">Products</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#industries">Industries</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#resources">Resources</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
+                </ul>
+            </div>
+            
         </nav>
     </header>
 
     <section class="hero">
-        <div class="hero-content">
-            <h1>Headline</h1>
-            <p>subheadline</p>
-            <a href="#cta" class="cta-btn">Get Started</a>
+        <div class="hero-content text-center">
+            <h1>Get a Customized Waste <br>
+                Solution Today!</h1>
+            <p>Every waste management need is unique, and we're here to provide a solution that <br>
+                fits yours perfectly. Let our team handle the details, so you can enjoy a clean <br>
+                and efficient waste disposal experience.</p>
+            <a href="#cta" class="cta-btn btn">Request a Quote</a>
         </div>
     </section>
 
@@ -60,6 +71,8 @@
     </footer>
 
 
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
