--- a/index.html
+++ b/index.html
@@ -44,11 +44,26 @@
         <h2>Our Services</h2>
         <p>subheadline</p>
         <div class="service-list">
-            <div class="service-item">Service 1</div>
-            <div class="service-item">Service 2</div>
-            <div class="service-item">Service 3</div>
-            <div class="service-item">Service 4</div>
-            <div class="service-item">Service 5</div>
+            <div class="service-item">
+                <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 1">
+                <p class="service-text">Service 1</p>
+            </div>
+            <div class="service-item">
+                <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 2">
+                <p class="service-text">Service 2</p>
+            </div>
+            <div class="service-item">
+                <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 3">
+                <p class="service-text">Service 3</p>
+            </div>
+            <div class="service-item">
+                <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 4">
+                <p class="service-text">Service 4</p>
+            </div>
+            <div class="service-item">
+                <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 5">
+                <p class="service-text">Service 5</p>
+            </div>
         </div>
     </section>
 
