Update service info style

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section class="hero">
         <div class="hero-content text-center">
-            <div class="display-3 font-weight-bold w-75 mx-auto" id="CTA-headline">Get a Customized Waste Solution Today!</div>
+            <div class="display-3 fw-bolder w-75 mx-auto" id="CTA-headline">Get a Customized Waste Solution Today!</div>
             <p class="w-75 mx-auto">Every waste management need is unique, and we're here to provide a solution that
                 fits yours perfectly. Let our team handle the details, so you can enjoy a clean
                 and efficient waste disposal experience.</p>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="service-item active">
                     <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 3">
-                    <h3 class="service-name">Service 3</h3>
+                    <h3 class="service-name">Service 3 Service 3 Service 3</h3>
                 </div>
                 <div class="service-item">
                     <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 4">
@@ -68,13 +68,16 @@
                 </div>
             </div>
             
-            <div class="service-info pt-4">
-                <p>headline</p>
-                <p>info on the service</p>
-                <a href="#contact" class="btn">Contact Us</a>
-            </div>  
+            <div class="service-info py-4"> 
+                <div class="w-75 mx-auto">
+                    <h5 id="service-headline" class="fw-semibold">Find Treasure in Our Custom Trash Can Solutions</h5>
+                    <p id="service-subhead">Toter has over 30 years of experience providing assembly, delivery and cart maintenance services across the United States and Canada.
+                        Starting or enhancing a collection program? Let Toter Services help you achieve a seamless, efficient, professional and successful result.
+                        We provide unique advantages that third-party vendors simply cannot offer.</p>
+                    <a href="#contact" class="contact-btn btn mb-3">Contact Us</a>
+                </div>  
+            </div>     
         </div>
-        
     </section>
 
     <section id="advantages" class="advantages">
