Add picture section

--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
         </div>
     </section>
 
+    <section id="picture-sec">
+        <div class="top-pic"></div>
+        <div class="main-pic"></div>
+    </section>
+
     <section id="advantages" class="advantages">
         <h2>Advantages</h2>
         <p>subheadline</p>
