--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="container">
-        <nav class="navbar navbar-expand-lg navbar-light py-3 d-flex justify-content-between">
+        <nav class="navbar navbar-expand-lg navbar-light py-3 d-flex justify-content-between fw-bold">
             <a class="navbar-brand" href="#">
                 <img src="assets/logo-01.svg" alt="logo" width="150">
             </a>
