--- a/index.html
+++ b/index.html
@@ -86,12 +86,15 @@
     </section>
 
     <section id="advantages" class="advantages">
-        <h2>Advantages</h2>
-        <p>subheadline</p>
-        <div class="advantages-list">
-            <div class="advantages-item">advantage 1</div>
-            <div class="advantages-item">advantage 2</div>
-            <div class="advantages-item">advantage 3</div>
+        <div class="container text-center">
+            <h1 class="fw-bold pt-4">The Toter Advantage</h1>
+            <p>subheadline</p>
+            <div class="advantages-list">
+                <div class="advantages-item">advantage 1</div>
+                <div class="advantages-item">advantage 2</div>
+                <div class="advantages-item">advantage 3</div>
+            </div>
+            <a href="#contact" class="contact-btn btn mb-3">Contact Us</a>
         </div>
     </section>
 
