Add checkmark svg

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
             <h1 class="fw-bold pt-4">The Toter Advantage</h1>
             <p>subheadline</p>
             <div class="advantages-list">
-                <div class="advantages-item">advantage 1</div>
-                <div class="advantages-item">advantage 2</div>
-                <div class="advantages-item">advantage 3</div>
+                <div class="advantages-item checkmark-svg">advantage 1</div>
+                <div class="advantages-item checkmark-svg">advantage 2</div>
+                <div class="advantages-item checkmark-svg">advantage 3</div>
             </div>
             <a href="#contact" class="contact-btn btn mb-3">Contact Us</a>
         </div>
