Update advantages to show list items correctly

--- a/index.html
+++ b/index.html
@@ -88,12 +88,19 @@
     <section id="advantages" class="advantages">
         <div class="container text-center">
             <h1 class="fw-bold pt-4">The Toter Advantage</h1>
-            <p>subheadline</p>
-            <div class="advantages-list">
-                <div class="advantages-item checkmark-svg">advantage 1</div>
-                <div class="advantages-item checkmark-svg">advantage 2</div>
-                <div class="advantages-item checkmark-svg">advantage 3</div>
-            </div>
+            <p>Advanced Rotational Molding™ eliminates the built-in stress, weakness and brittleness associated with injection-molded products.
+                In addition, Toter uses linear medium-density polyethylene (MDPE) that is specifically engineered for toughness and high-impact resistance.
+                In contrast, injection-molded carts are made with high-density polyethylene (HDPE),
+                which is rigid and brittle and offers poor impact resistance.</p>
+            <ul class="advantages-list">
+                <li class="advantages-item checkmark-svg">Superior toughness and durability</li>
+                <li class="advantages-item checkmark-svg">advantage 2</li>
+                <li class="advantages-item checkmark-svg">advantage 3</li>
+                <li class="advantages-item checkmark-svg">advantage 4</li>
+                <li class="advantages-item checkmark-svg">advantage 5</li>
+                <li class="advantages-item checkmark-svg">advantage 6</li>
+                <li class="advantages-item checkmark-svg">advantage 7</li>
+            </ul>
             <a href="#contact" class="contact-btn btn mb-3">Contact Us</a>
         </div>
     </section>
