Add imgs in advantages(still need more styling) & Add companies section components

--- a/index.html
+++ b/index.html
@@ -92,23 +92,39 @@
                 In addition, Toter uses linear medium-density polyethylene (MDPE) that is specifically engineered for toughness and high-impact resistance.
                 In contrast, injection-molded carts are made with high-density polyethylene (HDPE),
                 which is rigid and brittle and offers poor impact resistance.</p>
-            <ul class="advantages-list">
-                <li class="advantages-item checkmark-svg">Superior toughness and durability</li>
-                <li class="advantages-item checkmark-svg">advantage 2</li>
-                <li class="advantages-item checkmark-svg">advantage 3</li>
-                <li class="advantages-item checkmark-svg">advantage 4</li>
-                <li class="advantages-item checkmark-svg">advantage 5</li>
-                <li class="advantages-item checkmark-svg">advantage 6</li>
-                <li class="advantages-item checkmark-svg">advantage 7</li>
-            </ul>
-            <a href="#contact" class="contact-btn btn mb-3">Contact Us</a>
+                
+            <div class="adv-container">
+                <div class="img-stack">
+                    <div class="adv-img-top">
+                        <img src="assets/service-img.jpg" alt="advantage image" role="presentation" width="200px">
+                    </div>
+                    <div class="adv-img-bottom">
+                        <img src="assets/service-img.jpg" alt="advantage image" role="presentation" width="200px">
+                    </div>
+                </div>
+                <ul class="advantages-list">
+                    <li class="advantages-item checkmark-svg">Superior toughness and durability</li>
+                    <li class="advantages-item checkmark-svg">advantage 2</li>
+                    <li class="advantages-item checkmark-svg">advantage 3</li>
+                    <li class="advantages-item checkmark-svg">advantage 4</li>
+                    <li class="advantages-item checkmark-svg">advantage 5</li>
+                    <li class="advantages-item checkmark-svg">advantage 6</li>
+                    <li class="advantages-item checkmark-svg">advantage 7</li>
+                    <a href="#contact" class="contact-btn btn mb-3">Contact Us</a>
+                </ul>
+            </div>
+            
         </div>
     </section>
 
     <section id="companies" class="companies">
-        <h2>Companies</h2>
-        <p>list of affiliate companies</p>
+        <h1 class="fw-bold pt-4 text-center fw-bold py-4">Our Companies</h1>
+        <div>
+            <img src="assets/companies-logos.svg" alt="logos" class="companies-img img-fluid pb-5">
+        </div>
     </section>
+
+    <div class="top-pic"></div>
 
     <footer>
         <p>&copy; 2024 All rights reserved :3</p>
