Update companies section the images scales larger on smaller screen now

--- a/index.html
+++ b/index.html
@@ -118,9 +118,12 @@
     </section>
 
     <section id="companies" class="companies">
-        <h1 class="fw-bold pt-4 text-center fw-bold py-4">Our Companies</h1>
-        <div>
-            <img src="assets/companies-logos.svg" alt="logos" class="companies-img img-fluid pb-5">
+        <div class="container w-75 mx-auto py-lg-3">
+            <h1 class="pt-4 text-center fw-bolder py-4">Our Companies</h1>
+            <div>
+                <img src="assets/companies-logos.svg" alt="logos" class="companies-img img-fluid pb-5 d-none d-lg-block">
+                <img src="assets/companies-logos-sm.svg" alt="logos" class="companies-img img-fluid pb-5 d-lg-none">
+            </div>
         </div>
     </section>
 
