Update Advantages imgs & thier styling + Add advantages points

--- a/index.html
+++ b/index.html
@@ -48,23 +48,23 @@
             <div class="service-list pt-4">
                 <div class="service-item">
                     <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 1">
-                    <h3 class="service-name">Service 1</h3>
+                    <h3 class="service-name">Cart Buy Back</h3>
                 </div>
                 <div class="service-item">
                     <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 2">
-                    <h3 class="service-name">Service 2</h3>
+                    <h3 class="service-name">RFID Cart Management</h3>
                 </div>
                 <div class="service-item active">
                     <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 3">
-                    <h3 class="service-name">Service 3 Service 3 Service 3</h3>
+                    <h3 class="service-name">Custom Solutions</h3>
                 </div>
                 <div class="service-item">
                     <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 4">
-                    <h3 class="service-name">Service 4</h3>
+                    <h3 class="service-name">Cart Maintenance</h3>
                 </div>
                 <div class="service-item">
                     <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 5">
-                    <h3 class="service-name">Service 5</h3>
+                    <h3 class="service-name">Cart Assembly & Delivery</h3>
                 </div>
             </div>
             
@@ -86,30 +86,35 @@
     </section>
 
     <section id="advantages" class="advantages">
-        <div class="container text-center">
-            <h1 class="fw-bold pt-4">The Toter Advantage</h1>
-            <p>Advanced Rotational Molding™ eliminates the built-in stress, weakness and brittleness associated with injection-molded products.
+        <div class="container">
+            <h1 class="fw-bold pt-4 text-center">The Toter Advantage</h1>
+            <p class="text-center">Advanced Rotational Molding™ eliminates the built-in stress, weakness and brittleness associated with injection-molded products.
                 In addition, Toter uses linear medium-density polyethylene (MDPE) that is specifically engineered for toughness and high-impact resistance.
                 In contrast, injection-molded carts are made with high-density polyethylene (HDPE),
                 which is rigid and brittle and offers poor impact resistance.</p>
                 
-            <div class="adv-container">
-                <div class="img-stack">
+            <div class="adv-container d-flex flex-column flex-md-row align-items-center align-items-md-start mt-4">
+                <div class="img-stack mb-4 mb-md-0 me-md-5">
+                    <div class="adv-img-mid">
+                        <img src="assets/service-img.jpg" alt="advantage image" role="presentation" width="200px">
+                    </div>
                     <div class="adv-img-top">
-                        <img src="assets/service-img.jpg" alt="advantage image" role="presentation" width="200px">
+                        <img src="assets/garbage-can-02.jpg" alt="advantage image" role="presentation" width="200px">
                     </div>
-                    <div class="adv-img-bottom">
-                        <img src="assets/service-img.jpg" alt="advantage image" role="presentation" width="200px">
-                    </div>
+                    <!-- <div class="adv-img-bottom"></div>
+                        <img src="assets/garbage-can-01.jpg" alt="advantage image" role="presentation" width="200px">
+                    </div> -->
                 </div>
-                <ul class="advantages-list">
+                <ul class="advantages-list list-unstyled">
                     <li class="advantages-item checkmark-svg">Superior toughness and durability</li>
-                    <li class="advantages-item checkmark-svg">advantage 2</li>
-                    <li class="advantages-item checkmark-svg">advantage 3</li>
-                    <li class="advantages-item checkmark-svg">advantage 4</li>
-                    <li class="advantages-item checkmark-svg">advantage 5</li>
-                    <li class="advantages-item checkmark-svg">advantage 6</li>
-                    <li class="advantages-item checkmark-svg">advantage 7</li>
+                    <li class="advantages-item checkmark-svg">Single-piece product design — no seams</li>
+                    <li class="advantages-item checkmark-svg">Consistent wall thickness</li>
+                    <li class="advantages-item checkmark-svg">Superior toughness and durability</li>
+                    <li class="advantages-item checkmark-svg">Stress-free, zero-pressure product</li>
+                    <li class="advantages-item checkmark-svg">Ultraviolet (UV) stable</li>
+                    <li class="advantages-item checkmark-svg">Custom colors</li>
+                    <li class="advantages-item checkmark-svg">Corrosion and chemical resistance</li>
+                    <li class="advantages-item checkmark-svg">Unique design and structural capabilities such as rugged rim, sealed stop bar journals and granite finish</li>
                     <a href="#contact" class="contact-btn btn mb-3">Contact Us</a>
                 </ul>
             </div>
