--- a/footer.html
+++ b/footer.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
     <style>
         .footer {
@@ -70,36 +71,35 @@
 <footer class="footer bg-dark text-white pt-5">
     <div class="container">
       <div class="row">
-        <!-- Newsletter Signup -->
+        <!-- Quick Links -->
         <div class="col-md-4 mb-4">
-          <h5 class="text-uppercase">Stay in the loop</h5>
-          <p>Sign up for our newsletter to get the latest news and updates.</p>
-          <form>
-            <div class="form-group">
-              <input type="email" class="form-control" placeholder="Enter your email">
-            </div>
-            <button type="submit" class="btn btn-primary">Sign Up</button>
-          </form>
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-white">Terms of Website Use</a></li>
+            <li><a href="#" class="text-white">Terms of Sale</a></li>
+            <li><a href="#" class="text-white">PO Terms & Conditions</a></li>
+            <li><a href="#" class="text-white">CA Supply Chains</a></li>
+          </ul>
         </div>
   
         <!-- Quick Links -->
         <div class="col-md-4 mb-4">
           <h5 class="text-uppercase">Quick Links</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Products</a></li>
-            <li><a href="#" class="text-white">Services</a></li>
-            <li><a href="#" class="text-white">Support</a></li>
-            <li><a href="#" class="text-white">Contact Us</a></li>
+            <li><a href="#" class="text-white">Do Not Sell or Share My Personal
+              Information/Limit the Use of My Sensitive Personal Information</a></li>
+            <li><a href="#" class="text-white">Site Map</a></li>
+            <li><a href="#" class="text-white">Site Credits</a></li>
           </ul>
         </div>
   
         <!-- Social Media and Contact Info -->
         <div class="col-md-4 mb-4">
-          <h5 class="text-uppercase">Connect with Us</h5>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-white"><i class="fab fa-facebook-f mr-2"></i>Facebook</a></li>
+          <img src="assets/logo-01.svg" alt="logo" width="150">
+          <ul class="list-unstyled fa-ul">
+            <li><a href="#" class="text-white"><i class="fa fa-linkedin"></i></i> Facebook</a></li>
             <li><a href="#" class="text-white"><i class="fab fa-twitter mr-2"></i>Twitter</a></li>
             <li><a href="#" class="text-white"><i class="fab fa-instagram mr-2"></i>Instagram</a></li>
+            <li><i class="fa-li fa fa-check-square"></i>List icons</li>
           </ul>
           <p class="mt-3">Toter, LLC <br> 841 Meacham Road, Statesville, NC 28677</p>
           <p>Phone: (800) 424-0422</p>
@@ -118,6 +118,6 @@
   </footer>
   
   <!-- FontAwesome for Icons -->
-  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
 </body>
 </html>
