--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Toter</title>
 </head>
@@ -105,16 +107,17 @@
                         <img src="assets/garbage-can-01.jpg" alt="advantage image" role="presentation" width="200px">
                     </div> -->
                 </div>
-                <ul class="advantages-list list-unstyled">
-                    <li class="advantages-item checkmark-svg">Superior toughness and durability</li>
-                    <li class="advantages-item checkmark-svg">Single-piece product design — no seams</li>
-                    <li class="advantages-item checkmark-svg">Consistent wall thickness</li>
-                    <li class="advantages-item checkmark-svg">Superior toughness and durability</li>
-                    <li class="advantages-item checkmark-svg">Stress-free, zero-pressure product</li>
-                    <li class="advantages-item checkmark-svg">Ultraviolet (UV) stable</li>
-                    <li class="advantages-item checkmark-svg">Custom colors</li>
-                    <li class="advantages-item checkmark-svg">Corrosion and chemical resistance</li>
-                    <li class="advantages-item checkmark-svg">Unique design and structural capabilities such as rugged rim, sealed stop bar journals and granite finish</li>
+                <ul class="advantages-list fa-ul">
+                    <li>List icons</li>
+                    <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Superior toughness and durability</li>
+                    <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Single-piece product design — no seams</li>
+                    <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Consistent wall thickness</li>
+                    <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Superior toughness and durability</li>
+                    <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Stress-free, zero-pressure product</li>
+                    <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Ultraviolet (UV) stable</li>
+                    <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Custom colors</li>
+                    <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Corrosion and chemical resistance</li>
+                    <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Unique design and structural capabilities such as rugged rim, sealed stop bar journals and granite finish</li>
                     <a href="#contact" class="contact-btn btn mb-3">Contact Us</a>
                 </ul>
             </div>
