Fix adv sec alignment & size

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
     </section>
 
     <section id="advantages" class="advantages">
-        <div class="container">
+        <div class="container w-75 mx-auto">
             <h1 class="fw-bold pt-4 text-center">The Toter Advantage</h1>
             <p class="text-center">Advanced Rotational Molding™ eliminates the built-in stress, weakness and brittleness associated with injection-molded products.
                 In addition, Toter uses linear medium-density polyethylene (MDPE) that is specifically engineered for toughness and high-impact resistance.
                 In contrast, injection-molded carts are made with high-density polyethylene (HDPE),
                 which is rigid and brittle and offers poor impact resistance.</p>
                 
-            <div class="adv-container d-flex flex-column flex-md-row align-items-center align-items-md-start mt-4">
+            <div class="adv-container d-flex flex-column flex-md-row justify-content-center align-items-center align-items-md-start mt-4">
                 <div class="img-stack mb-4 mb-md-0 me-md-5">
                     <div class="adv-img-mid">
                         <img src="assets/service-img.jpg" alt="advantage image" role="presentation" width="200px">
@@ -103,23 +103,21 @@
                     <div class="adv-img-top">
                         <img src="assets/garbage-can-02.jpg" alt="advantage image" role="presentation" width="200px">
                     </div>
-                    <!-- <div class="adv-img-bottom"></div>
-                        <img src="assets/garbage-can-01.jpg" alt="advantage image" role="presentation" width="200px">
-                    </div> -->
                 </div>
-                <ul class="advantages-list fa-ul">
-                    <li>List icons</li>
-                    <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Superior toughness and durability</li>
-                    <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Single-piece product design — no seams</li>
-                    <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Consistent wall thickness</li>
-                    <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Superior toughness and durability</li>
-                    <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Stress-free, zero-pressure product</li>
-                    <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Ultraviolet (UV) stable</li>
-                    <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Custom colors</li>
-                    <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Corrosion and chemical resistance</li>
-                    <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Unique design and structural capabilities such as rugged rim, sealed stop bar journals and granite finish</li>
-                    <a href="#contact" class="contact-btn btn mb-3">Contact Us</a>
-                </ul>
+                <div class="col-md-7 col-lg-5">
+                    <ul class="advantages-list fa-ul d-flex flex-column align-items-start">
+                        <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Superior toughness and durability</li>
+                        <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Single-piece product design — no seams</li>
+                        <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Consistent wall thickness</li>
+                        <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Superior toughness and durability</li>
+                        <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Stress-free, zero-pressure product</li>
+                        <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Ultraviolet (UV) stable</li>
+                        <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Custom colors</li>
+                        <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Corrosion and chemical resistance</li>
+                        <li class="advantages-item"><i class="fa-li fa fa-check-circle"></i>Unique design and structural capabilities such as rugged rim, sealed stop bar journals and granite finish</li>
+                        <a href="#contact" class="contact-btn btn mb-3">Contact Us</a>
+                    </ul>
+                </div>
             </div>
             
         </div>
