Update padding here & there

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
 
-            <div class="service-info py-4">
+            <div class="service-info py-5">
                 <div class="w-75 mx-auto">
                     <h5 id="service-headline" class="fw-semibold">Find Treasure in Our Custom Trash Can Solutions</h5>
                     <p id="service-subhead">Toter has over 30 years of experience providing assembly, delivery and cart
@@ -174,7 +174,7 @@
                     </ul>
                 </div>
 
-                <div class="col-md-4 order-1 order-md-3">
+                <div class="col-md-4 order-1 order-md-3 px-lg-5">
                     <img src="assets/logo-wht-01.svg" alt="logo" width="150" class="pb-4">
                     <p>841 Meacham Road</p>
                     <p>Statesville, NC 28677</p>
