Replace imgs & Fix style here & there

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
                     <li class="nav-item"><a class="nav-link" href="#resources">Resources</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#cta">Request a Quote</a></li>
                 </ul>
             </div>
 
@@ -51,23 +52,23 @@
             <h1 class="fw-bold pt-4">Services</h1>
             <p>Efficient Collection for Every Industry</p>
             <div class="service-list pt-4">
-                <div class="service-item">
+                <div class="service-item container">
                     <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 1">
                     <h3 class="service-name">Cart Buy Back</h3>
                 </div>
-                <div class="service-item">
+                <div class="service-item container">
                     <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 2">
                     <h3 class="service-name">RFID Cart Management</h3>
                 </div>
-                <div class="service-item active">
+                <div class="service-item container active">
                     <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 3">
                     <h3 class="service-name">Custom Solutions</h3>
                 </div>
-                <div class="service-item">
+                <div class="service-item container">
                     <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 4">
                     <h3 class="service-name">Cart Maintenance</h3>
                 </div>
-                <div class="service-item">
+                <div class="service-item container">
                     <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 5">
                     <h3 class="service-name">Cart Assembly & Delivery</h3>
                 </div>
