Replace service imgs & add container around them

--- a/index.html
+++ b/index.html
@@ -52,27 +52,38 @@
             <h1 class="fw-bold pt-4">Services</h1>
             <p>Efficient Collection for Every Industry</p>
             <div class="service-list pt-4">
-                <div class="service-item container">
-                    <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 1">
+                <div class="service-item">
+                    <div class="img-container">
+                        <img src="assets/SS-cartBuyBack.png" class="service-img img-fluid" alt="Service 1">
+                    </div>
                     <h3 class="service-name">Cart Buy Back</h3>
                 </div>
-                <div class="service-item container">
-                    <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 2">
+                <div class="service-item">
+                    <div class="img-container">
+                        <img src="assets/SS-RFID.jpg" class="service-img img-fluid" alt="Service 2">
+                    </div>
                     <h3 class="service-name">RFID Cart Management</h3>
                 </div>
-                <div class="service-item container active">
-                    <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 3">
+                <div class="service-item active">
+                    <div class="img-container">
+                        <img src="assets/SS-CustomSol.jpg" class="service-img img-fluid" alt="Service 3">
+                    </div>
                     <h3 class="service-name">Custom Solutions</h3>
                 </div>
-                <div class="service-item container">
-                    <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 4">
+                <div class="service-item">
+                    <div class="img-container">
+                        <img src="assets/SS-cartMaintenance.jpg" class="service-img img-fluid" alt="Service 4">
+                    </div>
                     <h3 class="service-name">Cart Maintenance</h3>
                 </div>
-                <div class="service-item container">
-                    <img src="assets/service-img.jpg" class="service-img img-fluid" alt="Service 5">
+                <div class="service-item">
+                    <div class="img-container">
+                        <img src="assets/SS-CartDelivery.jpg" class="service-img img-fluid" alt="Service 5">
+                    </div>
                     <h3 class="service-name">Cart Assembly & Delivery</h3>
                 </div>
             </div>
+            
 
             <div class="service-info py-5">
                 <div class="w-75 mx-auto">
