Escape special chars

--- a/index.html
+++ b/index.html
@@ -52,35 +52,35 @@
             <h1 class="fw-bold pt-4">Services</h1>
             <p>Efficient Collection for Every Industry</p>
             <div class="service-list pt-4">
-                <div class="service-item">
+                <div class="service-item" data-id="1">
                     <div class="img-container">
                         <img src="assets/SS-cartBuyBack.png" class="service-img img-fluid" alt="Service 1">
                     </div>
                     <h3 class="service-name">Cart Buy Back</h3>
                 </div>
-                <div class="service-item">
+                <div class="service-item" data-id="2">
                     <div class="img-container">
                         <img src="assets/SS-RFID.jpg" class="service-img img-fluid" alt="Service 2">
                     </div>
                     <h3 class="service-name">RFID Cart Management</h3>
                 </div>
-                <div class="service-item active">
+                <div class="service-item active" data-id="3">
                     <div class="img-container">
                         <img src="assets/SS-CustomSol.jpg" class="service-img img-fluid" alt="Service 3">
                     </div>
                     <h3 class="service-name">Custom Solutions</h3>
                 </div>
-                <div class="service-item">
+                <div class="service-item" data-id="4">
                     <div class="img-container">
                         <img src="assets/SS-cartMaintenance.jpg" class="service-img img-fluid" alt="Service 4">
                     </div>
                     <h3 class="service-name">Cart Maintenance</h3>
                 </div>
-                <div class="service-item">
+                <div class="service-item" data-id="5">
                     <div class="img-container">
                         <img src="assets/SS-CartDelivery.jpg" class="service-img img-fluid" alt="Service 5">
                     </div>
-                    <h3 class="service-name">Cart Assembly & Delivery</h3>
+                    <h3 class="service-name">Cart Assembly &amp; Delivery</h3>
                 </div>
             </div>
             
@@ -172,7 +172,7 @@
                         <li><a href="#">Terms of Website Use</a></li>
                         <li><a href="#">Terms of Sale</a></li>
                         <li><a href="#">Privacy Policies</a></li>
-                        <li><a href="#">PO Terms & Conditions</a></li>
+                        <li><a href="#">PO Terms &amp; Conditions</a></li>
                         <li><a href="#">CA Supply Chains</a></li>
                     </ul>
                 </div>
