Delete unused images & Resize adv image

--- a/index.html
+++ b/index.html
@@ -115,14 +115,9 @@
                 which is rigid and brittle and offers poor impact resistance.</p>
 
             <div
-                class="adv-container d-flex flex-column flex-md-row justify-content-center align-items-center align-items-md-start mt-4">
-                <div class="img-stack mb-4 mb-md-0 me-md-5">
-                    <div class="adv-img-mid">
-                        <img src="assets/garbage-can-02.jpg" alt="advantage image" role="presentation" width="200px">
-                    </div>
-                    <div class="adv-img-top">
-                        <img src="assets/garbage-can-01.jpg" alt="advantage image" role="presentation" width="200px">
-                    </div>
+                class="adv-container d-flex flex-column flex-lg-row justify-content-center align-items-center align-items-md-start mt-4">
+                <div class="adv-img me-md-5 align-self-center">
+                    <img src="assets/Toter_EVRII_carts1.jpg" alt="toter carts" role="presentation" class="img-fluid">
                 </div>
                 <div class="col-md-7 col-lg-5">
                     <ul class="advantages-list fa-ul d-flex flex-column align-items-start">
