Fix h1 & display font weight

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <section class="hero">
         <div class="hero-content text-center">
-            <div class="display-3 fw-bolder w-75 mx-auto" id="CTA-headline">Get a Customized Waste Solution Today!</div>
+            <div class="display-3 w-75 mx-auto" id="CTA-headline">Get a Customized Waste Solution Today!</div>
             <p class="w-75 mx-auto">Every waste management need is unique, and we're here to provide a solution that
                 fits yours perfectly. Let our team handle the details, so you can enjoy a clean
                 and efficient waste disposal experience.</p>
@@ -49,7 +49,7 @@
 
     <section id="services" class="services">
         <div class="container-fluid text-center">
-            <h1 class="fw-bold pt-4">Services</h1>
+            <h1 class="h1 pt-4">Services</h1>
             <p>Efficient Collection for Every Industry</p>
             <div class="service-list pt-4">
                 <div class="service-item" data-id="1">
@@ -106,7 +106,7 @@
 
     <section id="advantages" class="advantages">
         <div class="container w-75 mx-auto">
-            <h1 class="fw-bold pt-4 text-center">The Toter Advantage</h1>
+            <h1 class="h1 pt-4 text-center">The Toter Advantage</h1>
             <p class="text-center">Advanced Rotational Molding™ eliminates the built-in stress, weakness and brittleness
                 associated with injection-molded products.
                 In addition, Toter uses linear medium-density polyethylene (MDPE) that is specifically engineered for
@@ -147,7 +147,7 @@
 
     <section id="companies" class="companies">
         <div class="container w-75 mx-auto py-lg-3">
-            <h1 class="pt-4 text-center fw-bolder py-4">Our Companies</h1>
+            <h1 class="h1 pt-4 text-center py-4">Our Companies</h1>
             <div>
                 <img src="assets/companies-logos.svg" alt="logos"
                     class="companies-img img-fluid pb-5 d-none d-lg-block">
