--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
             <div class="service-info py-5">
                 <div class="w-75 mx-auto">
-                    <h5 id="service-headline" class="fw-semibold">Find Treasure in Our Custom Trash Can Solutions</h5>
+                    <h5 id="service-headline" class="h5 fw-semibold">Find Treasure in Our Custom Trash Can Solutions</h5>
                     <p id="service-subhead">Toter has over 30 years of experience providing assembly, delivery and cart
                         maintenance services across the United States and Canada.
                         Starting or enhancing a collection program? Let Toter Services help you achieve a seamless,
