--- a/index.html
+++ b/index.html
@@ -51,51 +51,32 @@
         <div class="container-fluid text-center">
             <h1 class="h1 pt-4">Services</h1>
             <p>Efficient Collection for Every Industry</p>
-            <div class="service-list pt-4">
-                <div class="service-item" data-id="1">
-                    <div class="img-container">
-                        <img src="assets/SS-cartBuyBack.png" class="service-img img-fluid" alt="Service 1">
+            <div class="container-fluid mt-5">
+                <div class="row">
+                    <div class="col-1 d-flex align-items-center justify-content-center">
+                        <i class="fa fa-chevron-left nav-arrow" id="prevBtn"></i>
                     </div>
-                    <h3 class="service-name">Cart Buy Back</h3>
+                    <div class="col-10">
+                        <div class="card-container" id="cardContainer"></div>
+                    </div>
+                    <div class="col-1 d-flex align-items-center justify-content-center">
+                        <i class="fa fa-chevron-right nav-arrow" id="nextBtn"></i>
+                    </div>
                 </div>
-                <div class="service-item" data-id="2">
-                    <div class="img-container">
-                        <img src="assets/SS-RFID.jpg" class="service-img img-fluid" alt="Service 2">
+                <div class="row ">
+                    <div class="col-12">
+                        <div class="service-info py-5">
+                            <div class="w-75 mx-auto">
+                                <h5 id="service-headline" class="h5 fw-semibold"></h5>
+                                <p id="service-subhead"></p>
+                                <a href="#contact" class="contact-btn btn mb-3">Contact Us</a>
+                            </div>
+                        </div>
                     </div>
-                    <h3 class="service-name">RFID Cart Management</h3>
-                </div>
-                <div class="service-item active" data-id="3">
-                    <div class="img-container">
-                        <img src="assets/SS-CustomSol.jpg" class="service-img img-fluid" alt="Service 3">
-                    </div>
-                    <h3 class="service-name">Custom Solutions</h3>
-                </div>
-                <div class="service-item" data-id="4">
-                    <div class="img-container">
-                        <img src="assets/SS-cartMaintenance.jpg" class="service-img img-fluid" alt="Service 4">
-                    </div>
-                    <h3 class="service-name">Cart Maintenance</h3>
-                </div>
-                <div class="service-item" data-id="5">
-                    <div class="img-container">
-                        <img src="assets/SS-CartDelivery.jpg" class="service-img img-fluid" alt="Service 5">
-                    </div>
-                    <h3 class="service-name">Cart Assembly &amp; Delivery</h3>
                 </div>
             </div>
-            
 
-            <div class="service-info py-5">
-                <div class="w-75 mx-auto">
-                    <h5 id="service-headline" class="h5 fw-semibold">Find Treasure in Our Custom Trash Can Solutions</h5>
-                    <p id="service-subhead">Toter has over 30 years of experience providing assembly, delivery and cart
-                        maintenance services across the United States and Canada.
-                        Starting or enhancing a collection program? Let Toter Services help you achieve a seamless,
-                        efficient, professional and successful result.
-                        We provide unique advantages that third-party vendors simply cannot offer.</p>
-                    <a href="#contact" class="contact-btn btn mb-3">Contact Us</a>
-                </div>
-            </div>
+
         </div>
     </section>
 
@@ -209,6 +190,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
