Add missing header nav

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="container">
-        <nav class="navbar navbar-expand-lg navbar-light py-3 d-flex justify-content-between fw-bold">
+        <nav class="navbar navbar-expand-lg navbar-light py-2 d-flex justify-content-between fw-bold">
             <a class="navbar-brand" href="#">
                 <img src="assets/logo-01.svg" alt="logo" width="150">
             </a>
@@ -21,7 +21,12 @@
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarText">
+            <div class="collapse navbar-collapse d-lg-flex flex-lg-column" id="navbarText">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 mt-4 mt-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="#rep">Find a Rep</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#search">Search</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">800-424-0422</a></li>
+                </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 mt-4 mt-lg-0">
                     <li class="nav-item"><a class="nav-link" href="#products">Products</a></li>
                     <li class="nav-item"><a class="nav-link" href="#industries">Industries</a></li>
@@ -69,7 +74,7 @@
                             <div class="w-75 mx-auto">
                                 <h5 id="service-headline" class="h5 fw-semibold"></h5>
                                 <p id="service-subhead"></p>
-                                <a href="#contact" class="contact-btn btn mb-3">Contact Us</a>
+                                <a href="#contact" class="contact-btn btn mb-3 px-lg-4">Contact Us</a>
                             </div>
                         </div>
                     </div>
