--- a/index.html
+++ b/index.html
@@ -21,22 +21,27 @@
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-lg-flex flex-lg-column" id="navbarText">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 mt-4 mt-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="#rep">Find a Rep</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#search">Search</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">800-424-0422</a></li>
-                </ul>
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 mt-4 mt-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="#products">Products</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#industries">Industries</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#resources">Resources</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#cta">Request a Quote</a></li>
-                </ul>
+            
+            <div class="collapse navbar-collapse justify-content-end" id="navbarText">
+                <div class="d-lg-flex flex-lg-column">
+                    <ul class="nav-1 navbar-nav ms-auto mb-2 mb-lg-0 mt-4 mt-lg-0 fw-bolder">
+                        <li class="nav-item"><a class="nav-link" href="#rep"><i class="fa fa-location-arrow"></i> Find a Rep</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#search"><i class="fa fa-search"></i> Search</a></li>
+                        <li class="nav-item"><a class="nav-link nav-phone" href="#"><i class="fa fa-phone"></i> 800-424-0422</a></li>
+                    </ul>
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 mt-4 mt-lg-0 alig">
+                        <li class="nav-item"><a class="nav-link" href="#products">Products</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#industries">Industries</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#resources">Resources</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#cta">Request a Quote</a></li>
+                    </ul>
+                </div>
+                <div class="d-flex flex-column  mx-4">
+                    <a class="nav-link" href="#"><i class="fa fa-universal-access"></i></a>
+                </div>
             </div>
-
         </nav>
     </header>
 
