Fix cta padding

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p class="w-75 mx-auto">Every waste management need is unique, and we're here to provide a solution that
                 fits yours perfectly. Let our team handle the details, so you can enjoy a clean
                 and efficient waste disposal experience.</p>
-            <a href="#cta" class="cta-btn btn mb-4 mt-md-2 px-5, py-2">Request a Quote</a>
+            <a href="#cta" class="cta-btn btn mb-4 mt-md-2">Request a Quote</a>
         </div>
     </section>
 
