Update adv padding

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </section>
 
     <section id="advantages" class="advantages">
-        <div class="container w-75 mx-auto">
+        <div class="container mb-5 w-75 mx-auto">
             <h1 class="h1 pt-4 text-center">The Toter Advantage</h1>
             <p class="text-center">Advanced Rotational Molding™ eliminates the built-in stress, weakness and brittleness
                 associated with injection-molded products.
@@ -138,7 +138,7 @@
 
     <section id="companies" class="companies">
         <div class="container w-75 mx-auto py-lg-3">
-            <h1 class="h1 pt-4 text-center py-4">Our Companies</h1>
+            <h1 class="h1 pt-5 text-center pb-4">Our Companies</h1>
             <div>
                 <img src="assets/companies-logos.svg" alt="logos"
                     class="companies-img img-fluid pb-5 d-none d-lg-block">
